--- a/src/main/resources/static/changepasswordPage.html
+++ b/src/main/resources/static/changepasswordPage.html
@@ -41,13 +41,10 @@
         width: 50%;
     }
 
-    .imgcontainer {
-        text-align: center;
-        margin: 24px 0 12px 0;
-    }
+
 
     .container {
-        margin-top: 200px;
+        margin-top: 100px;
         padding: 16px;
     }
 
@@ -80,6 +77,7 @@
         border: none;
         cursor: pointer;
         width: 12%;
+
     }
 
 
@@ -97,16 +95,26 @@
             <input type="password" placeholder="Enter New Password" id="newpassword" name="newpassword" required><br>
             <input type="password" placeholder="Renter New Password" id="newpassword2"><br>
             <button id="submit" onclick="check()" type="button">Change!</button>
-            <button type="submit" style="background-color: green">Cancel</button>
+            <button id="submit" onclick="add()" type="button">cancel</button>
 
         </div>
 
     </form>
 </div>
+<center><a href="/userPage" target="_blank">Go back to previous page</a></center>
 
 </body>
+<script language="javascript">
+    function   add(){
+
+        window.location.replace('/UserPage');
+    }
+
+</script>
+
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script>
+
     function getCookie(c_name)
     {
         if (document.cookie.length>0)
@@ -168,6 +176,7 @@ if(pw1 !== pw2) {
 
          })
      })
+    alert("You have changed your password successfully")
 
 }
 </script>
