--- a/src/main/resources/static/departmentPage.html
+++ b/src/main/resources/static/departmentPage.html
@@ -274,7 +274,7 @@ window.onload = function(){
 <style>
     button {
         background-color: #0d57a0;
-        color: white;
+        color: black;
         padding: 14px 20px;
         margin: 8px 0;
         border: none;
