--- a/src/main/resources/static/loginPage.html
+++ b/src/main/resources/static/loginPage.html
@@ -132,7 +132,7 @@ $(document).ready(function(){
 <div class="middle">
     <form>
         <div class="imgContainer">
-            <img src="logo.jpg" alt="logo" class="logo" style="width: 300px; height: 200px;">
+            <img src="logo2.jpg" alt="logo" class="logo" style="width: 374px; height: 317px;">
         </div>
 
         <div class="container">
