--- a/src/main/resources/static/authorityPage.html
+++ b/src/main/resources/static/authorityPage.html
@@ -87,7 +87,7 @@ $(document).ready(function(){
 <div class="middle">
     <form action="action_page.php">
         <div class="imgContainer">
-            <img src="logo.jpg" alt="logo" class="logo" style="width: 300px; height: 200px;">
+            <img src="banner.jpg" alt="logo" class="logo" style="width: 300px; height: 200px;">
         </div>
 
         <div class="container">
