--- a/src/main/resources/static/nearbyPage.html
+++ b/src/main/resources/static/nearbyPage.html
@@ -139,7 +139,7 @@
 
     <form action="action_page.php">
         <div class="imgContainer">
-            <img src="logo.jpg" alt="logo" class="logo" style="width: 300px; height: 200px;">
+            <img src="logo2.jpg" alt="logo" class="logo" style="width: 374px; height: 317px;">
         </div>
 
         <div class="container">
