--- a/src/main/resources/static/signupPage.html
+++ b/src/main/resources/static/signupPage.html
@@ -127,7 +127,7 @@
 <div class="middle">
     <form>
         <div class="imgContainer">
-            <img src="logo.jpg" alt="logo" class="logo" style="width: 300px; height: 200px;">
+            <img src="banner.jpg" alt="logo" class="logo" style="width: 300px; height: 200px;">
         </div>
 
         <div class="container">
