--- a/src/main/resources/static/createTextPage.html
+++ b/src/main/resources/static/createTextPage.html
@@ -216,7 +216,7 @@
 
 function makeTagList(callback) {
     $.ajax({
-        url : '/getTags',
+        url : '/getDSList',
         type : 'GET',
         data : {
             format: 'json'
