--- a/src/main/resources/static/editDescriptionPage.html
+++ b/src/main/resources/static/editDescriptionPage.html
@@ -163,9 +163,14 @@ function submitChange() {
             },
             error: function (error) {
                 console.log(error);
-            }
+            };
+            console.log("000");
         });
+        console.log("111");
     });
+    console.log("222");
+    window.location.replace('/diseaseDescriptionPage');
+
 }
 </script>
 
