--- a/src/main/resources/static/articlePost.html
+++ b/src/main/resources/static/articlePost.html
@@ -40,7 +40,11 @@
     cursor: pointer;
     width: 50%;
     }
+    button:hover{
+        color: #42a5f5;
+        transition: text-shadow 1s,color 1s;
 
+    }
     .upperbtn {
     background-color: #0d57a0;
     color: white;
