--- a/src/main/resources/static/authorityPage.html
+++ b/src/main/resources/static/authorityPage.html
@@ -75,7 +75,11 @@ $(document).ready(function(){
     cursor: pointer;
     width: 50%;
     }
+    button:hover{
+        color: #42a5f5;
+        transition: text-shadow 1s,color 1s;
 
+    }
     .imgcontainer {
     text-align: center;
     margin: 24px 0 12px 0;
@@ -87,7 +91,7 @@ $(document).ready(function(){
 <div class="middle">
     <form action="action_page.php">
         <div class="imgContainer">
-            <img src="banner.jpg" alt="logo" class="logo" style="width: 300px; height: 200px;">
+            <img src="logo2.jpg" alt="logo" class="logo" style="width: 374px; height: 317px;">
         </div>
 
         <div class="container">
