--- a/src/main/resources/static/loginPage.html
+++ b/src/main/resources/static/loginPage.html
@@ -93,7 +93,11 @@ $(document).ready(function(){
     cursor: pointer;
     width: 50%;
     }
+    button:hover{
+        color: #42a5f5;
+        transition: text-shadow 1s,color 1s;
 
+    }
     .imgcontainer {
     text-align: center;
     margin: 24px 0 12px 0;
