--- a/src/main/resources/static/changepasswordPage.html
+++ b/src/main/resources/static/changepasswordPage.html
@@ -41,7 +41,11 @@
         width: 50%;
     }
 
+    button:hover{
+        color: #42a5f5;
+        transition: text-shadow 1s,color 1s;
 
+    }
 
     .container {
         margin-top: 100px;
@@ -79,7 +83,11 @@
         width: 12%;
 
     }
+    #userbtn:hover{
+        color: #42a5f5;
+        transition: text-shadow 1s,color 1s;
 
+    }
 
 </style>
 
@@ -95,7 +103,7 @@
             <input type="password" placeholder="Enter New Password" id="newpassword" name="newpassword" required><br>
             <input type="password" placeholder="Renter New Password" id="newpassword2"><br>
             <button id="submit" onclick="check()" type="button">Change!</button>
-            <button id="submit" onclick="add()" type="button">cancel</button>
+            <button id="submit" onclick="add()" type="button">Cancel</button>
 
         </div>
 
