map can show phone number and address now

--- a/src/main/resources/static/nearbyPage.html
+++ b/src/main/resources/static/nearbyPage.html
@@ -229,15 +229,22 @@ function initMap() {
         }
 
         function createMarker(place) {
-            var placeLoc = place.geometry.location;
-            var marker = new google.maps.Marker({
-                map: map,
-                position: place.geometry.location
-            });
+            var request = { reference: place.reference };
+            var service = new google.maps.places.PlacesService(map);
 
-            google.maps.event.addListener(marker, 'click', function() {
-                infowindow.setContent(place.name);
-                infowindow.open(map, this);
+            service.getDetails(request, function(place, status) {
+              if (status === google.maps.places.PlacesServiceStatus.OK) {
+                var marker = new google.maps.Marker({
+                  map: map,
+                  position: place.geometry.location
+                });
+                google.maps.event.addListener(marker, 'click', function() {
+                  infowindow.setContent('<div><strong>' + place.name + '<br>' +
+                    place.formatted_address + '<br>' +
+                    place.formatted_phone_number + '</div>');
+                  infowindow.open(map, this);
+                });
+              }
             });
         }
     }
@@ -272,16 +279,25 @@ function initMap2() {
         }
 
         function createMarker(place) {
-            var placeLoc = place.geometry.location;
-            var marker = new google.maps.Marker({
-                map: map,
-                position: place.geometry.location
+
+            var request = { reference: place.reference };
+            var service = new google.maps.places.PlacesService(map);
+
+            service.getDetails(request, function(place, status) {
+              if (status === google.maps.places.PlacesServiceStatus.OK) {
+                var marker = new google.maps.Marker({
+                  map: map,
+                  position: place.geometry.location
+                });
+                google.maps.event.addListener(marker, 'click', function() {
+                  infowindow.setContent('<div><strong>' + place.name + '<br>' +
+                    place.formatted_address + '<br>' +
+                    place.formatted_phone_number + '</div>');
+                  infowindow.open(map, this);
+                });
+              }
             });
 
-            google.maps.event.addListener(marker, 'click', function() {
-                infowindow.setContent(place.name);
-                infowindow.open(map, this);
-            });
         }
     }
 }
