--- a/src/main/resources/static/departmentPage.html
+++ b/src/main/resources/static/departmentPage.html
@@ -58,7 +58,7 @@
     </div>
 
     <div id="footer">
-        <button type="submit" id="continue" style="background-color: yellow; width: 80px; height: 50px">Continue</button>
+        <button type="submit" id="continue" style="background-color: orange; width: 90px; height: 50px">Continue</button>
     </div>
 </div>
 
@@ -277,7 +277,8 @@ window.onload = function(){
         color: white;
         padding: 14px 20px;
         margin: 8px 0;
-        border: none;
+        border: 1px groove #cccccc;
+        border-radius: 5px;
         cursor: pointer;
         width: 50%;
     }
@@ -384,7 +385,8 @@ window.onload = function(){
         color: white;
         padding: 14px 20px;
         margin: 8px 0;
-        border: none;
+        border: 1px groove #cccccc;
+        border-radius: 5px;
         cursor: pointer;
         width: 150px;
         height: 150px;
