--- a/src/main/resources/static/signupPage.html
+++ b/src/main/resources/static/signupPage.html
@@ -83,7 +83,8 @@
         color: white;
         padding: 14px 20px;
         margin: 8px 0;
-        border: none;
+        border: 1px groove #cccccc;
+        border-radius: 5px;
         cursor: pointer;
         width: 50%;
     }
