--- a/src/main/resources/static/articleView.html
+++ b/src/main/resources/static/articleView.html
@@ -26,9 +26,15 @@
     color: white;
     font-size: medium;
     }
+    .footer {
+        position:fixed;
+        bottom:0;
+        left:35cm;
+    }
 </style>
 
 <body style="background-color:#1aa8a8">
+<a name="top"></a>
 
 <div class="top" style="float:left"><h1>WebDoctor</h1></div>
 <div class="top" style="float:left"><h1>/</h1></div>
@@ -43,6 +49,11 @@
 
 <div class="main"><h2 id="title">Description</h2>
     <p id="description"></p>
+</div>
+<div class="footer">
+    <a href="#top">
+        <img border="0" src="/Users/ruipang/Documents/cs307/WebDoctor/src/main/resources/static/cs307箭头.jpg" />
+    </a>
 </div>
 </body>
 
